# imageAnalysis

./: .gitignore
Herramientas_Analisis_Imagenes_Integrado/: CMakeLists.txt  README.md
Herramientas_Analisis_Imagenes_Integrado/src/: AppController.cpp  AppController.hpp  CanvasArea.cpp  operations.hpp
Herramientas_Analisis_Imagenes_Integrado/src/utils/: Canny.cpp  Convolution.cpp  Convolution.hpp  FFT.hpp  FFTImgUtils.hpp  ImageProcessor.cpp  ImageProcessor.h  Kernels.hpp  MorphOps.cpp  MorphOps.hpp  Noise.cpp  Noise.hpp  SEFactory.cpp
Herramientas_Analisis_Imagenes_Integrado_navfix/src/: AppWindow.cpp  AppWindow.hpp  CanvasArea.hpp  LeftPanel.cpp  LeftPanel.hpp  main.cpp  operations.cpp
Herramientas_Analisis_Imagenes_Integrado_navfix/src/utils/: FFTImgUtils.cpp
Practica09_Esquinas_MVC/: main.py
Practica09_Esquinas_MVC/app/controller/: app_controller.py
Practica_1/: Makefile  README.md  crear_proyecto.sh
Practica_1/include/: app.hpp
Practica_1/include/core/: image_view.hpp  pipeline.hpp  pixel_types.hpp
Practica_1/include/ops/: grayscale.hpp  resize.hpp
Practica_1/src/: main.cpp
Practica_1/src/ui/: controller.cpp
Practica_1_Imagen_Digital/include/core/: filter.hpp
Practica_1_Imagen_Digital/include/io/: loader.hpp
Practica_1_Imagen_Digital/src/ui/: view.cpp
Practica_2/: README.md
Practica_2/src/: image_utils.cpp  image_utils.hpp  main.cpp  transform.cpp  transform.hpp  ui.cpp  ui.hpp
Practica_2_TransformacionesModelosColor/: CMakeLists.txt
Practica_3/: CMakeLists.txt  Practica_03_Histograma.docx  README.md
Practica_3/include/: app.hpp
Practica_3/include/core/: image_view.hpp
Practica_3/include/io/: loader.hpp
Practica_3/include/model/: adapters.hpp
Practica_3/include/ui/: controller.hpp  view.hpp
Practica_3/src/ui/: controller.cpp
Practica_3_Histograma/src/: main.cpp
Practica_3_Histograma/src/ui/: view.cpp
Practica_4_TransformacionesLogicas/: CMakeLists.txt  README.md
Practica_4_TransformacionesLogicas/src/: main.cpp
Practica_4_TransformacionesLogicas/src/controller/: AppController.cpp  AppController.hpp
Practica_4_TransformacionesLogicas/src/model/: ImageModel.cpp  ImageModel.hpp
Practica_4_TransformacionesLogicas/src/utils/: BinaryOps.cpp  BinaryOps.hpp  Types.hpp
Practica_4_TransformacionesLogicas/src/view/: MainWindow.cpp  MainWindow.hpp
Practica_5_TransformacionesGeometricas/: .gitignore  CMakeLists.txt  Practica_05_Transformaciones_Geometricas.docx  README.md  compile.sh
Practica_5_TransformacionesGeometricas/src/: main.cpp
Practica_5_TransformacionesGeometricas/src/controller/: TransformController.cpp  TransformController.h
Practica_5_TransformacionesGeometricas/src/model/: ImageModel.cpp  ImageModel.h
Practica_5_TransformacionesGeometricas/src/view/: MainWindow.cpp  MainWindow.h
Practica_5_TransformacionesGeometricas/test_images/: README.txt
Practica_6_TransformacionesMorfologicas/: CMakeLists.txt  Practica_06_Transformaciones_Morfologicas.docx  README.md
Practica_6_TransformacionesMorfologicas/src/: main.cpp
Practica_6_TransformacionesMorfologicas/src/controller/: AppController.cpp  AppController.hpp
Practica_6_TransformacionesMorfologicas/src/model/: ImageModel.cpp  ImageModel.hpp
Practica_6_TransformacionesMorfologicas/src/utils/: SEFactory.hpp  Types.hpp
Practica_6_TransformacionesMorfologicas/src/view/: MainWindow.cpp  MainWindow.hpp
Practica_7_TransformacionFourier/: CMakeLists.txt  README.md
Practica_7_TransformacionFourier/src/: main.cpp
Practica_7_TransformacionFourier/src/controller/: AppController.cpp  AppController.hpp
Practica_7_TransformacionFourier/src/model/: ImageModel.cpp  ImageModel.hpp
Practica_7_TransformacionFourier/src/utils/: FFT.cpp  ImgUtils.cpp  ImgUtils.hpp
Practica_7_TransformacionFourier/src/view/: MainWindow.cpp  MainWindow.hpp
Practica_8_FiltradoImagenesDeteccionBordes/: CMakeLists.txt  Practica_08_Filtrado_Convolucion_Canny.docx  README.md
Practica_8_FiltradoImagenesDeteccionBordes/src/: main.cpp
Practica_8_FiltradoImagenesDeteccionBordes/src/controller/: AppController.cpp  AppController.hpp
Practica_8_FiltradoImagenesDeteccionBordes/src/model/: ImageModel.cpp  ImageModel.hpp
Practica_8_FiltradoImagenesDeteccionBordes/src/utils/: Canny.cpp  Canny.hpp  ImgUtils.cpp
Practica_8_FiltradoImagenesDeteccionBordes/src/view/: MainWindow.cpp  MainWindow.hpp
Practica_9_Esquinas_MVC/: Harris.java  Practica_09_Extraccion_Esquinas.docx  README.md  main.py
VisionCoreSDK/: README.md  pyproject.toml  requirements.txt
VisionCoreSDK/docs/: architecture.md  module_map.md
VisionCoreSDK/scripts/: visioncore.fish
VisionCoreSDK/src/visioncore/core/: exceptions.py  image.py  operation.py  params.py
VisionCoreSDK/src/visioncore/modules/: registry.py
VisionCoreSDK/src/visioncore/modules/features/: corners.py
VisionCoreSDK/src/visioncore/modules/frequency/: fft.py
VisionCoreSDK/src/visioncore/modules/preprocessing/: basic.py  geometry.py  logical.py  morphology.py
VisionCoreSDK/src/visioncore/modules/segmentation/: edges.py
VisionCoreSDK/src/visioncore/pipeline/: pipeline.py
VisionCoreSDK/src/visioncore_app/: app.py
VisionCoreSDK/src/visioncore_app/controller/: app_controller.py
VisionCoreSDK/src/visioncore_app/view/: base.py  canvas.py  main_window.py  qt_utils.py
VisionCoreSDK/src/visioncore_sdk.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
VisionCoreSDK/tests/: test_pipeline_smoke.py
practica_1/: Makefile  README.md  image_channel_extractor  main.cpp
practica_1/src/: main.cpp
readmes/Practica_1_Imagen_Digital/: README.md
readmes/Practica_2_TransformacionesModelosColor/: README.md
readmes/Practica_3_Histograma/: README.md
readmes/Practica_4_TransformacionesLogicas/: README.md
readmes/Practica_5_TransformacionesGeometricas/: README.md
readmes/Practica_6_TransformacionesMorfologicas/: README.md
readmes/Practica_7_TransformacionFourier/: README.md
readmes/Practica_8_FiltradoImagenesDeteccionBordes/: README.md
test8/Practica_8_FiltradoImagenesDeteccionBordes/: README.md
(+18 files in other folders)
