[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "visioncore-sdk"
version = "0.1.0"
description = "VisionCore SDK: modular image processing pipeline with a modern desktop UI"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Academic / internal"}
authors = [{name = "Henry"}]
dependencies = [
  "numpy>=1.24",
  "opencv-python>=4.8",
  "PySide6>=6.6",
]

[project.scripts]
visioncore = "visioncore_app.app:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
